fix(css): remove override font-size in .login-link on tablet

--- a/practice-two/src/styles/sections/entry.css
+++ b/practice-two/src/styles/sections/entry.css
@@ -99,7 +99,6 @@
 
   .login-link {
     margin-bottom: 22px;
-    font-size: var(--font-size-xxsmall);
     line-height: var(--line-height-2md);
   }
 
